--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -1,3 +1,8 @@
+@import "./reset.css";
+@import "./header.css";
+@import "./board.css";
+@import "./main.css";
+
 .wrapper {
     display: flex;
     flex-direction: column;
