--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -10,5 +10,16 @@ html(lang="en")
             .app__header
             .app__main
                 .app__main__menu
+                    ul.menuList
+                        li.menuList__item
+                            a(href="/") Home
+                        li.menuList__item
+                            a(href="/test1") st - 1
+                        li.menuList__item
+                            a(href="/test2") st - 2
+                        li.menuList__item
+                            a(href="/test3") st - 3
+                        li.menuList__item
+                            a(href="/test4") st - 4    
                 .app__main__contents
                     block content
